# rusty_thumbnail

./: Cargo.toml  README.md  images.db  images.db-shm  images.db-wal
migrations/: 20241113121046_init.sql
src/: index.html  main.rs
