[package]
name = "rusty_thumbnail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.5"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
